Add Magic Generator Structure